# farm_stack_app

./: README.md  docker-compose.yml
back-end/: .dockerignore  .gitignore  Backend.Dockerfile  Pipfile  logging.ini  requirements.txt
back-end/app/auth/: models.py  router.py  selectors.py  service.py  utils.py
back-end/app/core/: model.py  security.py
backend/: .gitignore  Pipfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/admin/: models.py  router.py  selectors.py  services.py
backend/app/auth/: models.py  router.py  selectors.py  service.py  services.py  utils.py
backend/app/core/: config.py  model.py  security.py  services.py
backend/app/listings/: models.py  router.py  selectors.py  services.py
backend/app/post/: models.py  router.py  services.py
backend/app/property/: models.py  router.py  selectors.py  services.py
front-end/: .gitignore  package.json  pnpm-lock.yaml  tailwind.config.js
front-end/app/: head.tsx  layout.tsx  page.tsx
front-end/components/: Dropdown.tsx  Layout.tsx  Navbar.tsx
front-end/components/partials/: Footer.tsx  Navbar.tsx  SwitchTheme.tsx
front-end/components/ui/: LinkNav.tsx
front-end/pages/: _app.tsx  index.tsx
front-end/pages/accounts/: register.tsx
frontend/: package.json  pnpm-lock.yaml  tailwind.config.cjs  tailwind.config.js
frontend/app/: layout.tsx  page.tsx
frontend/app/account/: layout.tsx  page.tsx
frontend/components/: Providers.tsx
frontend/context/: index.tsx  reducer.ts
frontend/src/: App.tsx  main.tsx
frontend/src/context/: index.tsx  (+1 more)
frontend/utils/: authApi.ts
(+22 files in other folders)
